--- a/src/style/App.scss
+++ b/src/style/App.scss
@@ -11,7 +11,7 @@
     height: 40vmin;
   }
   
-  .App-header {
+  .App-header, .Footer {
     background-color: #282c34;
     display: flex;
     flex-direction: column;
