--- a/src/components/PlayActions/_PlayActions.scss
+++ b/src/components/PlayActions/_PlayActions.scss
@@ -9,5 +9,5 @@
     padding: 1em;
     display: flex;
     flex-direction: row;
-    justify-content: space-around;
+    justify-content: center;
 }
